# affine-body-dynamics

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTION.md  Jenkinsfile  LICENSE  README.md  build.ps1  setup.py
cmake/ABD/: abd_warnings.cmake
cmake/recipes/: boost.cmake  eigen.cmake  ipc_toolkit.cmake  libigl.cmake  software_renderer.cmake  tight_inclusion.cmake
comparisons/: CMakeLists.txt
comparisons/Box2D/: CMakeLists.txt
fixtures/3D/mechanisms/: bolt.json
fixtures/3D/unit-tests/: vertex-vertex.json
fixtures/3D/unit-tests/tessellated-plane/: two-triangles.json
inputs/: ABD Vs. RigidIPC.md
inputs/bnc_crimp/: bnc.json
inputs/cube_drop/: cube_drop.json
inputs/dsub_25pin/: dsub.json
inputs/gear_assembly_offset/: gear_offset.json  gear_offset_rotating.json
inputs/gripper/: gripper.json  gripper_with_screw_torque.json
inputs/kinematic_body/: kinematic_body.json
inputs/m16/: m16.json
inputs/peg/: peg_insertion.json
inputs/simple_joint/: simple_joint.json
inputs/simple_tets/: run.bat  tets.json
inputs/slope/: slope.json
inputs/usb_test_01/: usb.json
inputs/wreck_ball/: wreck_ball.json
meshes/gripper/: target.stl
meshes/simple_joint/: A.stl  B.stl
python/: CMakeLists.txt
python/src/: bindings.cpp
src/: SimState.cpp  logger.cpp  logger.hpp  main.cpp  profiler.cpp  profiler.hpp
src/ccd/: ccd.cpp  ccd.hpp  save_queries.cpp  save_queries.hpp
src/ccd/accd/: accd.hpp
src/ccd/linear/: broad_phase.cpp  broad_phase.hpp
src/ccd/rigid/: broad_phase.cpp  broad_phase.hpp  rigid_body_bvh.cpp  rigid_body_bvh.hpp  rigid_body_hash_grid.cpp  rigid_body_hash_grid.hpp  time_of_impact.cpp
src/interval/: interval_root_finder.cpp
src/io/: read_rb_scene.cpp  serialize_json.tpp  write_gltf.cpp
src/opt/: collision_constraint.cpp  distance_barrier_constraint.cpp  distance_barrier_constraint.hpp  distance_barrier_constraint.tpp  optimization_problem.hpp
src/physics/: mass.cpp  mass.hpp  pose.hpp  pose.tpp  rigid_body.cpp  rigid_body.hpp  rigid_body.tpp  rigid_body_assembler.cpp  rigid_body_assembler.hpp  rigid_body_assembler.tpp  rigid_body_problem.cpp  rigid_body_problem.hpp  simulation_problem.hpp
src/problems/: barrier_problem.hpp  distance_barrier_rb_problem.cpp  distance_barrier_rb_problem.hpp  linear_constraint.cpp  linear_constraint.hpp  linear_constraint_handler.cpp  linear_constraint_handler.hpp  problem_factory.cpp  rigid_body_collision_constraint.hpp
src/solvers/: ipc_solver.cpp  newton_solver.cpp  newton_solver.hpp
src/tools/: CMakeLists.txt  cli_ccd.cpp  cli_min_distance.cpp  time_ccd.cpp
src/tools/renderer/: main.cpp
src/utils/: eigen_ext.hpp  row_echelon.cpp  row_echelon.hpp
src/viewer/: UISimState.cpp  igl_viewer_ext.cpp
tests/: CMakeLists.txt
tests/ccd/: test_additive_ccd.cpp  test_rigid_body_time_of_impact.cpp
tests/geometry/: test_distance.cpp  test_intersection.cpp
tests/interval/: test_interval.cpp
tests/io/: test_read_rb_scene.cpp
tests/opt/: test_distance_barrier_constraint.cpp
tests/physics/: test_mass.cpp  test_orthogonality_constraint.cpp  test_pose.cpp  test_rigid_body.cpp  test_rigid_body_problem.cpp  test_rigid_body_system.cpp
tests/problems/: test_linear_constraints.cpp
tests/validation/: test_validation.cpp
tools/: benchmark.py
